--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.6.8",
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cloudinary": "^2.0.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "http": "^0.0.1-security",
-    "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1",
-    "pg": "^8.11.3",
-    "socket.io": "^4.7.5",
-    "ws": "^8.16.0"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.6.8",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
+		"cloudinary": "^2.0.3",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.18.3",
+		"http": "^0.0.1-security",
+		"jsonwebtoken": "^9.0.2",
+		"mysql": "^2.18.1",
+		"pg": "^8.11.3",
+		"socket.io": "^4.7.5",
+		"ws": "^8.16.0"
+	}
 }
